# pico-r

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  deny.toml
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml  rust-ci.yml
examples/: preprocess_bench.rs
src/: audio.rs  cart.rs  gfx.rs  gfx_font.rs  input.rs  lib.rs  lua_engine.rs  memory.rs  palette.rs  preprocessor.rs  state.rs  trigtables.rs
src/pico_lua/: api.rs  ast.rs  coroutine.rs  interp.rs  lex.rs  mod.rs  parse.rs  serialize.rs  value.rs
tests/: compat_regressions.rs  conformance.rs
tests/conformance/: LEDGER.md  broken_on_official.txt  expected_failures.txt  sweep_baseline.tsv
tests/conformance/golden/: all_over_string.txt  audio-0x07-pending-command-cursor-suppression.txt  audio-control-code-0x07-not-parsed.txt  audio_sfx_music.txt  bigmap_registers.txt  bitwise_rhs_recurse.txt  bitwise_rhs_unary_not.txt  chr-nonnumeric-arg-dropped.txt  chr_wrap.txt  clip-negative-origin-clamp-order.txt  closure_shadowed_capture.txt  color-arg-high-bits-dropped.txt  compound_assign_andor.txt  compound_assign_lhs_boundary.txt  compound_assign_modulo_ternary.txt  compound_assign_multiline_rhs.txt  coroutine-type-reports-table.txt  coroutines.txt  count_non_table.txt  cstore-filename-arg-unimplemented.txt  cursor-y-newline-advance-ignores-live-char-h.txt  custom-font-5600-and-0e-0f-control-codes-broken.txt  elapsed-time-ticks-before-not-after-frame-callbacks.txt  env_local_scoping.txt  env_table.txt  fillp-sprite-apply-gate-missing.txt  fillp-sprite-map-tline-unconditional-apply.txt  fixed-mul-truncates-toward-zero-not-floor.txt  fixed_point_api_granularity.txt  fixed_point_for_loop_accum.txt  fixed_point_for_loop_boundary.txt  fixed_point_literal_quantization.txt  fixed_point_overflow.txt  fixed_point_poke4_overflow.txt  fixed_point_quantize_rounding.txt  flip-during-init-no-present.txt  font_glyphs.txt  gfx_draw_state.txt  glyph-o-x-button-swap.txt  goto_preserves_locals.txt  (+93 more)
tests/conformance/probes/: all_over_string.p8  audio-0x07-pending-command-cursor-suppression.p8  audio-control-code-0x07-not-parsed.p8  audio_sfx_music.p8  bigmap_registers.p8  bitwise_rhs_recurse.p8  bitwise_rhs_unary_not.p8  chr-nonnumeric-arg-dropped.p8  chr_wrap.p8  clip-negative-origin-clamp-order.p8  closure_shadowed_capture.p8  coroutines.p8  (+123 more)
tests/fixtures/: hello.p8
tools/: dump_pp.rs  dump_raw.rs  oracle.sh  run_cart.rs
tools/e2e/: package.json  smoke.mjs
tools/wasm-test/: README.md  run-all.sh  run-wasm-pixel-probe.mjs
web/: index.html  pico-r.wasm
