[package]
name = "pico-r"
version = "0.1.0"
edition = "2021"
description = "Pure-WASM Rust rewrite of pico-z (PICO-8 emulator)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "run-cart"
path = "tools/run_cart.rs"
required-features = []

[[bin]]
name = "dump-pp"
path = "tools/dump_pp.rs"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
