[package]
name = "pico-r"
version = "0.1.0"
edition = "2021"
description = "Pure-WASM PICO-8 emulator in Rust"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "run-cart"
path = "tools/run_cart.rs"
required-features = []

[[bin]]
name = "dump-pp"
path = "tools/dump_pp.rs"
required-features = []

[[bin]]
name = "dump-raw"
path = "tools/dump_raw.rs"
required-features = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# panic="abort" is NOT set here -- a blanket profile setting applies to
# every target, not just wasm32-unknown-unknown, which broke `cargo test
# --release`/native release binaries on a clean checkout (they need
# unwind). It's scoped to the wasm32 target specifically via a rustflag
# in .cargo/config.toml instead.

[dependencies]
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
